@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.834 2007-08-03 14:52:06 castaglia Exp $
+$Id: NEWS,v 1.835 2007-08-09 22:56:01 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -18,6 +18,8 @@ CVS
   supported" error if IPv6 support enabled.
 - Bug 2955 - Undeclared identifier MAP_FAILED for mod_delay on AIX.
 - Bug 2958 - mod_wrap2 does not handle multiple rules in access files.
+- Bug 2963 - Use of -A option for LIST/NLST commands not cleared for
+  subsequent commands.
 
 1.3.1rc3 - Released 04-Jul-2007
 --------------------------------
